--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -46,7 +46,7 @@
 
 
 % If you wish to uncover everything in a step-wise fashion, uncomment
-% the following command: 
+% the following command:
 %\beamerdefaultoverlayspecification{<+->}
 
 \begin{document}
@@ -56,117 +56,21 @@
   \titlepage
 \end{frame}
 
-%-------------------------------------------------------------------------------
-\begin{frame}
-  \frametitle{Outline}
-  \tableofcontents
-  % You might wish to add the option [pausesections]
-\end{frame}
-
 %===============================================================================
-
-
 
 % \begin{frame}
 %   \frametitle{Intro - Desktop Search}
-% 
+%
 % So you have Google Desktop indexing your personal data on your computer\dots
 % wouldn't it be great if this indexing database could be used to feed
 % some of your blog automatically?
-% 
+%
 % Wouldn't it be awesome if your personal address book would be formed
 % automatically by having a system find all the addresses in all of your
 % documents?
-% 
+%
 % In this talk I will show a simple system that leverages docutils to do
 % something like that.
-% 
-
-% - Try out Emacs Planner from Sasha, try it, see if I can get some ideas for
-%   Nabu.
-
-
-% %-------------------------------------------------------------------------------
-% \begin{frame}
-%   \frametitle{Motivation}
-% 
-% slide with the problem to solve
-% 
-% 
-% \end{frame}
-% 
-% 
-% - I write lots of little text files
-% 
-%   ... example ...
-% 
-%   - Configuration notes
-% 
-%     -> as these notes
-% 
-%   - Timesheet
-% 
-% 
-% 
-% What is Nabu?
-% =============
-% 
-% - show diagram
-% 
-% 
-% 
-% 
-% Example Extractor
-% =================
-% 
-% - go through an example of writing an extractor
-% 
-% 
-% 
-% 
-% 
-% Applications
-% ============
-% 
-% - blog
-% 
-%   - selective delivery of information
-% 
-%     e.g. ``soft privileges'', a link that expires, that allows access to a
-%     specific resource, e.g. I want to share my image gallery with my boss
-% 
-% - calendar
-% - timesheet
-% 
-% - ...
-% 
-% 
-% Advantages
-% ==========
-% 
-% - Any document structures can be reused and combined to provide a rich content
-% 
-% 
-% 
-% Downsides
-% =========
-% 
-% - You have to understand how restructuredtext gets parsed
-% 
-%   - You end up getting dragged into the docutils project a bit
-% 
-%   --> You can use rst2pseudoxml.py to easily debug and learn input syntaxes
-% 
-% 
-% Future Work
-% ===========
-% 
-% - Support encryption in the publisher
-% - Support per-document options (... adds complexity)
-% 
-% 
-
-
 
 
 %-------------------------------------------------------------------------------
@@ -224,7 +128,7 @@
 
   \hfill \dots or maybe not?
 
-
+\end{frame}
 
 % - In 1993, I was using Xmosaic, the good old days of Linux had not arrived yet
 % - Then Netscape came about, introduced some changes, and then Mozilla
@@ -235,32 +139,30 @@
 % - I wrote a small program to manage them, it would self-organize
 % - This is a pattern in my life, solving little problems with scripts
 
-\end{frame}
 
 
 %% %-------------------------------------------------------------------------------
 %% \begin{frame}[fragile]
 %%   \frametitle{1993 - Bookmarks - Problems}
-%% 
+%%
 %%   Problems I had with this system:
 %%   \begin{itemize}
 %%     \item A tree is inadequate for storing links (Bookmarks belong in many
 %%       ``groups''), and organizing by hand is an annoyance
-%% 
+%%
 %%     \item You might want to share \textit{some} of these bookmarks \\
 %%       (e.g. del.icio.us)
-%% 
+%%
 %%     \item You might want to search your bookmarks
 %%   \end{itemize}
-%% 
+%%
 %% \vfill\pause
 %%   \emph{Another script} was born\dots
 %%   \begin{itemize}
 %%   \item \texttt{tengis}: a small GUI app/database of bookmarks
 %%   \end{itemize}
-%% 
+%%
 %% \end{frame}
-
 
 
 %-------------------------------------------------------------------------------
@@ -290,7 +192,7 @@
 
   Using ``paragraph-grep'' from a shell, I lived happily ever after\dots
 \vfill
-  \hfill \dots or have I? 
+  \hfill \dots or have I?
 
 \end{frame}
 
@@ -326,9 +228,9 @@
 \begin{frame}[fragile]
   \frametitle{2002 - The Art of Taking Notes}
 
-  I'm getting a little bit old, I'm losing memory\dots 
+  I'm getting a little bit old, I'm losing memory\dots
 
-\vfill 
+\vfill
   But I'm a little less stupid now and I just \textbf{KNOW} in advance that I
   will forget.  When I start a new task, I \textbf{invariably} start a new text
   file to take notes on it.
@@ -366,7 +268,7 @@
 \item The editor capabilities of browsers are inadequate
   \begin{itemize}
   \item Who has never lost a file being edited in a TEXTAREA?
-  \item I'm a programmer, I want powerful editing!  
+  \item I'm a programmer, I want powerful editing!
     I live in Emacs
   \item I want to be able to save without submitting
   \end{itemize}
@@ -382,20 +284,20 @@
 %% %-------------------------------------------------------------------------------
 %% \begin{frame}[fragile]
 %%   \frametitle{Real Editing}
-%% 
+%%
 %% I live in Emacs.
-%% 
+%%
 %% When I first log in on my machine, I invariably do:
 %% \begin{enumerate}
 %% \item start a shell
 %% \item start emacs
 %% \item start a web browser
 %% \end{enumerate}
-%% 
+%%
 %% Most of you are probably doing the same.
-%% 
+%%
 %% Emacs or vi are always kept running.
-%%  
+%%
 %% \end{frame}
 
 
@@ -412,7 +314,7 @@ One example of these notes files are my travel files:
 \item They contain addresses of people and places to visit \\
   ($\rightarrow$ contact info)
 \item They contain URLs of related websites ($\rightarrow$ bookmarks)
-\item They contain references to books and articles \\ 
+\item They contain references to books and articles \\
   ($\rightarrow$ publications)
 \end{itemize}
 
@@ -493,7 +395,7 @@ Accomodation
   :w: http://www.ambarpousada.com.br/
 
   Para chegar
- 
+
   Do aeroporto, tem ônibus executivo "Praça da Sé" via Farol da Barra durante o
   dia, tem que saltar no Barra Center, na praia. Se você chegar à noite ou se
   preferir o taxi, peçam por e-mail e mandaremos, por sua conta, um dos nossos
@@ -537,7 +439,8 @@ Accomodation
   \end{itemize}
 
   But I want this \textbf{now}, and for just my personal corpus of files, even
-  if it's a restricted version of this idea.
+  if it's a restricted version of this idea.  I want a database built from the
+  files on my computer to feed a website, like a blog on steroids.
 
 \end{frame}
 
@@ -558,6 +461,7 @@ Accomodation
   \item It is not tied specifically to PIM info
   \item You can write extractors for anything, you just have to select the
     docutils structures and conventions that you are going to recognize
+  \item On the client it requires only Python to publish files
   \end{itemize}
 
 %   If I had served you this definition in the first place, I'm not sure you
@@ -613,11 +517,72 @@ Accomodation
 \end{frame}
 
 
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{Extractors}
+
+  You need to write extractors for the stuff that you are interested in, for
+  example:
+
+{\scriptsize
+\begin{verbatim}
+  * :name: Bill Gates
+    :email: billg@microsoft.com
+\end{verbatim}
+}
+
+\vfill
+
+  Use \texttt{rst2pseudoxml.py} to figure how docutils parses it:
+
+{\scriptsize
+\begin{verbatim}
+<bullet_list bullet="*">
+    <list_item>
+        <field_list>
+            <field>
+                <field_name>
+                    name
+                <field_body>
+                    <paragraph>
+                        Bill Gates
+            <field>
+                <field_name>
+                    email
+                <field_body>
+                    <paragraph>
+                        <reference refuri="mailto:billg@microsoft.com">
+                            billg@microsoft.com
+\end{verbatim}
+}
+
+\end{frame}
+
 
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Extractors}
 
+{\small
+Then implement it:
+\begin{verbatim}
+class AddressExtractor(extract.Extractor):
+
+    def apply( self, **kwargs ):
+        v = AddressVisitor(self, self.document)
+        self.document.walkabout(v)
+
+class AddressVisitor(...):
+    ...
+
+class AddressStorage(extract.SQLExtractorStorage):
+
+    def store( self, unid, name, tfields ):
+    ... # store the stuff in a database
+
+\end{verbatim}
+%    default_priority = 900
+}
 
 \end{frame}
 
@@ -625,90 +590,73 @@ Accomodation
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Target Audience}
- 
+
 {\large\begin{center}
 \textbf{It's not for your mom!}
 \end{center}}
 
   It is intended only for people who have developed the ability to edit text
   files carefully (typically programmers, you guys).
- 
+
  \begin{itemize}
  \item We understand indentation
  \item We know about spacing, justification, filling, etc.
  \item We are careful about pesky little details
  \item This is what makes creating ReST files possible
  \end{itemize}
- 
+
 \vfill
 
   I want to leverage this ability!
- 
+
 \end{frame}
 
- 
- 
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{ReStructuredText and docutils}
+
+  \includegraphics[width=1.0\textwidth]{docutils1.pdf}
+
+\end{frame}
+
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{ReStructuredText and docutils}
+
+  \includegraphics[width=1.0\textwidth]{docutils2.pdf}
+
+\end{frame}
 
 
 
-% Have a single slide that describes the :Id: tag in a document
 
-
-
-% The Dependency Problem
-% ======================
-% 
-% More dependencies means
-% 
-% - it's harder to install
-% - it's usable on less platforms
-% - the lifetime of the project is linked with the lifetime of the shorter
-%   dependency
-% 
-% On the **client**, we depend only on:
-% 
-% - Python
-% - Text files (i.e. files with one of the predefined encodings)
-% 
-% 
-% 
 % ReStructuredText
 % ================
-% 
+%
 % .. ask Goodger to get up
-% 
+%
 %    "If you see this guy in the corridor, show him some love, give him a hug."
-% 
+%
 % - The best text-to-structure conversion tool.
 % - Finds the best compromises (all decisions are documented thoroughly)
-% 
-% 
+%
+%
 % .. <show some text with recursive boxes in it>
-% 
-% 
-% 
-% 
-% 
-% Desktop Search
-% ==============
-% 
-% Imagine if you could use your desktop database to feed your blog.
-
-
-
-
-
-
-
-
-
-
-
+%
 
 
 % FIXME: build a graph with the docutils structure, the one with
 % reader/transform/writer, same as in the documentation, with the intention to
-% explain that I've had to modify it and to stop the process halfway
+
+% explain that I've had to modify it and to stop the process halfway and that I
+% store this document in pickled format
+
+
+
+
+
 
 
 
@@ -728,12 +676,6 @@ Accomodation
 \end{frame}
 
 
-
-
-
-
-
-
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Events Example}
@@ -743,7 +685,7 @@ Accomodation
 sat 2005-12-31 19h30
   - NYE Evening chez Stuart
 
-sat 2005-12-31 
+sat 2005-12-31
   - Proteus: mkisofs for backup copy DVD-ROM
 
 2006-01-02
@@ -756,7 +698,7 @@ sat 2005-12-31
 
   - Confirm flight to Brazil w/ Constellation
 
-2006-01-04 20h00 
+2006-01-04 20h00
   - Dinner w/ Pierre @ Golden Cari
 
 2006-01-05
@@ -787,6 +729,22 @@ sat 2005-12-31
 
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
+  \frametitle{Other Examples}
+
+  \begin{itemize}
+  \item Billing info: you could define a simple timesheet format in a text file
+    and have some kind per-task or per-client billing info page
+
+  \item Dynamic website data: you could use Nabu to feed some data for a web
+    site, this allows you to avoid having to write input forms
+
+  \end{itemize}
+
+\end{frame}
+
+
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
   \frametitle{Nabu Contents Browser - Extracted}
 
 \includegraphics[width=1.0\textwidth]{ll-extracted.pdf}
@@ -812,42 +770,60 @@ sat 2005-12-31
 
 - Creating precise reStructuredText can be fragile from the user's point-of-view
 
-- you need to make sure that your set of Ids is unique
+- you need to make sure that your set of Ids are unique
   - use UUIDs (78d8a600-abb4-49c0-a0fc-1c315cddbc1a)
+
+- You end up getting dragged into the docutils project a bit
 
 (EXAMPLE)
 
-\end{frame}
+% - You have to understand how restructuredtext gets parsed
+%
+%   - You end up getting dragged into the docutils project a bit
+%
+%   --> You can use rst2pseudoxml.py to easily debug and learn input syntaxes
 
+\end{frame}
 
 
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
-  \frametitle{Possible Uses}
+  \frametitle{Future Work}
 
-... static site, with a small dynamic section
-
-allows you to avoid having to write input forms
-
-% - uses: imagine a static pages site, but you want to update the special events
-%   yourself (the client pays for this).  You can do that with a simple text file
-%   and Nabu.
-% 
-
-
+  \begin{itemize}
+  \item Stabilize (I need to finish my own presentation layer)
+  \item Support encryption in the publisher client
+  \item Support per-document options
+  \end{itemize}
 
 \end{frame}
 
 
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{Questions}
+
+{\LARGE
+  \begin{center}
+Nabu homepage:\\
+\verb=http://furius.ca/nabu/=
+  \end{center}
+}
+
+\end{frame}
 
 
 %===============================================================================
 \end{document}
 
 
+
+
 % Add: MapExtractor that can extract all my links to Google maps and create a
 % single map with them, or a list of locations, they could be accompanied with a
 % trail, and then each trail be displayed separately
+
+
 
 
 
@@ -864,4 +840,8 @@ allows you to avoid having to write input forms
 % * add a slide about Python training
 
 
-%%  TODO:  (explain how extractors work)
+
+
+
+% TODO: explain how the extracted data gets REPLACED whenever a document is
+% uploaded
