--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -73,6 +73,11 @@
 % something like that.
 
 
+
+% TODO: mention a note about Python training around the beginning
+
+
+
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{Introduction}
@@ -612,6 +617,11 @@ class AddressStorage(extract.SQLExtractorStorage):
 \end{frame}
 
 
+
+
+
+% before ?
+
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
   \frametitle{ReStructuredText and docutils}
@@ -629,9 +639,6 @@ class AddressStorage(extract.SQLExtractorStorage):
 
 \end{frame}
 
-
-
-
 % ReStructuredText
 % ================
 %
@@ -645,7 +652,6 @@ class AddressStorage(extract.SQLExtractorStorage):
 %
 % .. <show some text with recursive boxes in it>
 %
-
 
 % FIXME: build a graph with the docutils structure, the one with
 % reader/transform/writer, same as in the documentation, with the intention to
@@ -837,7 +843,6 @@ Nabu homepage:\\
 % * borrow someone's mouse for the show
 % * use xannotate during the presentation
 
-% * add a slide about Python training
 
 
 
