--- a/doc/talks/pycon2006.tex
+++ b/doc/talks/pycon2006.tex
@@ -621,6 +621,15 @@ class AddressStorage(extract.SQLExtractorStorage):
 
 
 % before ?
+%-------------------------------------------------------------------------------
+\begin{frame}[fragile]
+  \frametitle{ReStructuredText and docutils}
+
+  \includegraphics[width=0.8\textwidth]{rest2d.png}
+
+\end{frame}
+
+
 
 %-------------------------------------------------------------------------------
 \begin{frame}[fragile]
@@ -658,6 +667,8 @@ class AddressStorage(extract.SQLExtractorStorage):
 
 % explain that I've had to modify it and to stop the process halfway and that I
 % store this document in pickled format
+
+
 
 
 
